--- a/src/components/UI/PageBody/page.less
+++ b/src/components/UI/PageBody/page.less
@@ -6,6 +6,7 @@
   min-height: 100vh;
   min-height: calc(100vh - 50px);
   position: relative;
+  font-variant: normal;
   &:after {
     display: block;
     bottom: -10px;
